manifests/mw-deploy.yaml
# Configuration to deploy Holonet sites for POC
# Kubernetes 1.8.
#
# Example usage: kubectl create -f <this_file>
#

# ------------------- MediaWiki Deployment ------------------- #
apiVersion: apps/v1beta1
kind: Deployment
metadata:
    labels:
      app: mediawiki
    name: mediawiki
    namespace: jx
spec:
    replicas: 3
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: mediawiki
    template:
        metadata:
            labels:
                app: mediawiki
                version: v0.1
        spec:
            containers:
            - name: mediawiki
              #image: gitlab.sdsc.edu:4567/j2dangelo/php_version_5.3:latest
              image: bylexus/apache-php53
              imagePullPolicy: Always
              ports: 
              - containerPort: 80
              volumeMounts:
#             - mountPath: /etc
#                name: phpconf
              - mountPath: "/var/www/html"
                name: holonetcontent 
                subPath: "www"
#                subPath: "www/MediaWiki"
              - mountPath: "/var/lib/mediawiki"
                name: holonetcontent 
                subPath: "var/lib/mediawiki"
              - mountPath: "/var/lib/mysql"
                name: holonetcontent 
                subPath: "var/lib/mysql"
              - mountPath: "/var/lib/php"
                name: holonetcontent 
                subPath: "var/lib/php"
              - mountPath: "/etc/httpd"
                name: holonetcontent 
                subPath: "etc/httpd"
              - mountPath: "/etc/php.d"
                name: holonetcontent 
                subPath: "etc/php.d"
              - mountPath: "/etc/pki"
                name: holonetcontent 
                subPath: "etc/pki"
              - mountPath: "/var/lib"
                name: workdir

#            initContainers:
#              - name: chowns
#                image: busybox
#                command:
#                - chown
#                - "-R root:root"
#                - /work-dir/php
#                command:
#                - chown
#                - "-R root:root"
#                - /work-dir/mysql
#                command:
#                - chown
#                - "-R root:root"
#                - /work-dir/mediawiki

            volumes:
            - name: workdir
              emptyDir: {}
            - name: holonetcontent
              persistentVolumeClaim:
                claimName: holonet-pvc
            - name: phpconf
              configMap:
                name: phpconfig  # generated from configmap-create.sh 

---
