manifests/sdnap-deploy.yaml
# Configuration to deploy Holonet sites for POC
# Kubernetes 1.8.
#
# Example usage: kubectl create -f <this_file>
#

# ------------------- MediaWiki Deployment ------------------- #
apiVersion: apps/v1beta1
kind: Deployment
metadata:
    labels:
      app: sdnap
    name: sdnap
    namespace: jx
spec:
    replicas: 3
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: sdnap
    template:
        metadata:
            labels:
                app: sdnap
                version: v0.2
        spec:
            containers:
            - name: sdnap
              image: gitlab.sdsc.edu:4567/aha/holonet-sdnap:latest
              #image: bylexus/apache-php53
              imagePullPolicy: Always
              ports: 
              - containerPort: 80
              volumeMounts:
              - mountPath: "/etc/apache2/sites-enabled/httpd.conf"
                name: apache2-config-volume
                subPath: "httpd.conf"
              - mountPath: "/etc/pki/tls/certs/maersk_sdsc_edu_cert.crt"
                name: cert-volume
                subPath: "maersk_sdsc_edu_cert.crt"
              - mountPath: "/etc/pki/tls/private/maersk.key"
                name: key-volume
                subPath: "maersk.key"
              - mountPath: "/etc/pki/tls/certs/maersk_sdsc_edu_interm.crt"
                name: interm-volume
                subPath: "maersk_sdsc_edu_interm.crt"
#              - mountPath: "/etc/php5/cli/php.ini"
#                name: php-config-volume 
#                subPath: "php.ini"
#             - mountPath: "/var/lib/mysql"
#               name: holonetcontent 
#               subPath: "var/lib/mysql"
#              - mountPath: "/var/lib/php"
#                name: holonetcontent 
#                subPath: "var/lib/php"
#  emptydir for sharing data between pods
#              - mountPath: "/var/lib"
#                name: workdir

#            initContainers:
#              - name: chowns
#                image: busybox
#                command:
#                - chown
#                - "-R root:root"
#                - /work-dir/php
#                command:
#                - chown
#                - "-R root:root"
#                - /work-dir/mysql
#                command:
#                - chown
#                - "-R root:root"
#                - /work-dir/sdnap

            volumes:
#           - name: workdir
#             emptyDir: {}
#           - name: holonetcontent
#             persistentVolumeClaim:
#               claimName: holonet-pvc
            - name: apache2-config-volume
              configMap:
                name: apache2-config  # generated from configmap.yaml
            - name: php-config-volume
              configMap:
                name: php-config  # generated from configmap.yaml
            - name: cert-volume
              configMap:
                name: cert  # generated from configmap.yaml
            - name: key-volume
              configMap:
                name: key  # generated from configmap.yaml
            - name: interm-volume
              configMap:
                name: interm  # generated from configmap.yaml
                

---
