manifests/sdnap-svc.yaml
# ------------------- SDNAP Service ------------------- #
apiVersion: v1
kind: Service
metadata:
    name: sdnap
    namespace: jx
spec:
  #type: NodePort
  ports:
  - name: http
    targetPort: 80
    port: 80
    #nodePort: 30041
  - name: https
    targetPort: 443
    port: 443
  selector:
    app: sdnap
