manifests/ingresses.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sdnap
  namespace: jx
  annotations:
#   traefik.frontend.rule.type: PathPrefixStrip
#   traefik.frontend.rule.type: HostRegexp
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: sdnap.sdsc.edu
    http:
      paths:
      - path: /
        backend:
          serviceName: sdnap
          servicePort: https
#          servicePort: http
