manifests/sdnap-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sdnap-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/auth-realm: traefik
    ingress.kubernetes.io/auth-secret: basicauthpasswd
    ingress.kubernetes.io/auth-type: basic
  namespace: jx
spec:
  rules:
  - host: sdnap.sdsc.edu
    http:
      paths:
      - path: 
        backend:
          serviceName: sdnap
          servicePort: http
